Clean up documentation

--- a/vignettes/babelgene-intro.Rmd
+++ b/vignettes/babelgene-intro.Rmd
@@ -18,13 +18,14 @@ knitr::opts_chunk$set(
 
 Genomic analysis of model organisms often requires the use of databases based on human data or making comparisons to patient-derived resources.
 This requires converting genes between human and non-human equivalents.
-The `babelgene` R package provides provides gene orthologs/homologs:
+The `babelgene` R package helps to simplify the process.
+It provides provides gene orthologs/homologs:
 
 * in an R-friendly tidy/long format with one gene pair per row
 * for multiple frequently studied model organisms, such as mouse, rat, fly, and zebrafish
 * sourced from multiple databases
-* as gene symbols, NCBI Entrez, or Ensembl IDs
-* can be queried without an active internet connection
+* as gene symbols, NCBI Entrez, and Ensembl IDs
+* without a need for an active internet connection
 
 ## Usage
 
