--- a/vignettes/babelgene-intro.Rmd
+++ b/vignettes/babelgene-intro.Rmd
@@ -16,16 +16,16 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-Genomic analysis of model organisms often requires the use of databases based on human data or making comparisons to patient-derived resources.
-This requires converting genes between human and non-human equivalents.
-The `babelgene` R package helps to simplify the process.
-It provides provides gene orthologs/homologs:
+Genomic analysis of model organisms frequently requires the use of databases based on human data or making comparisons to patient-derived resources.
+This requires harmonization of gene names into the same gene space.
+The `babelgene` R package helps to simplify the conversion process.
+It provides gene orthologs/homologs:
 
-* in an R-friendly tidy/long format with one gene pair per row
 * for multiple frequently studied model organisms, such as mouse, rat, fly, and zebrafish
 * sourced from multiple databases
 * as gene symbols, NCBI Entrez, and Ensembl IDs
-* without a need for an active internet connection
+* without accessing external resources and requiring an active internet connection
+* in an R-friendly "[tidy](https://r4ds.had.co.nz/tidy-data.html)" format with one gene pair per row
 
 ## Usage
 
